@startuml
interface IGameInput {
}
class GameInput {
    - Awake() : void
}
class "IObservable`1"<T> {
}
IGameInput --> "OnStartButtonClickAsObservable<Unit>" "IObservable`1"
IGameInput --> "OnQuitButtonClickAsObservable<Unit>" "IObservable`1"
IGameInput --> "OnRestartButtonClickAsObservable<Unit>" "IObservable`1"
IGameInput --> "OnBack2MenuButtonClickAsObservable<Unit>" "IObservable`1"
MonoBehaviour <|-- GameInput
IGameInput <|-- GameInput
GameInput --> "_startUIDocument" UIDocument
GameInput --> "_endUIDocument" UIDocument
GameInput --> "_startButton" Button
GameInput --> "_quitButton" Button
GameInput --> "_restartButton" Button
GameInput --> "_back2MenuButton" Button
GameInput --> "OnStartButtonClickAsObservable<Unit>" "IObservable`1"
GameInput --> "OnQuitButtonClickAsObservable<Unit>" "IObservable`1"
GameInput --> "OnRestartButtonClickAsObservable<Unit>" "IObservable`1"
GameInput --> "OnBack2MenuButtonClickAsObservable<Unit>" "IObservable`1"
GameInput --> "_startUI" VisualElement
GameInput --> "_endUI" VisualElement
@enduml
